# skyetek-mqtt

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  mqttmain.cpp
SkyeTekAPI/: Platform.h  SkyeTekAPI.c  SkyeTekAPI.h  SkyeTekProtocol.h
SkyeTekAPI/Device/: Device.h  DeviceFactory.c  DeviceFactory.h  SPIDevice.c  SPIDevice.h  SPIDeviceFactory.c  SerialDevice.c  SerialDevice.h  SerialDeviceFactory.c  USBDevice.c  USBDevice.h  USBDeviceFactory.c
SkyeTekAPI/Drivers/: aardvark.c  aardvark.h
SkyeTekAPI/Protocol/: CRC.c  CRC.h  Protocol.h  STPv2.c  STPv2.h  STPv3.c  STPv3.h  asn1.c  asn1.h  utils.c  utils.h
SkyeTekAPI/Reader/: Reader.h  ReaderFactory.c  ReaderFactory.h  SkyeTekReader.c  SkyeTekReaderFactory.c
SkyeTekAPI/Samples/linux/: 85-skyemodule.rules  README.txt  example  example.c
SkyeTekAPI/Tag/: DesfireTag.c  GenericTag.c  GenericTag.h  Iso14443ATag.c  Iso14443BTag.c  Tag.c  Tag.h  TagFactory.c  TagFactory.h
